# django_backend_food_delivery

./: .gitignore  README.md  pyproject.toml
fooddelivery/: clean_files_temp.py  db.sqlite3  mixins.py
fooddelivery/addresses/: admin.py  models.py
fooddelivery/addresses/api/: router.py  serializers.py  views.py
fooddelivery/addresses/migrations/: 0001_initial.py  0002_alter_address_user.py  0002_initial.py
fooddelivery/drivers/: admin.py  models.py
fooddelivery/drivers/api/: router.py  serializers.py  views.py
fooddelivery/drivers/migrations/: 0001_initial.py
fooddelivery/fooddelivery/: asgi.py  settings.py  urls.py  wsgi.py
fooddelivery/menus/: admin.py  models.py
fooddelivery/menus/api/: serializers.py  views.py
fooddelivery/menus/migrations/: 0001_initial.py
fooddelivery/orders/: admin.py  models.py
fooddelivery/orders/api/: router.py  serializers.py  views.py
fooddelivery/orders/migrations/: 0001_initial.py  0002_initial.py  0002_order_driver.py  0003_alter_order_driver_alter_order_user.py
fooddelivery/payments/: admin.py  models.py
fooddelivery/payments/api/: router.py  serializers.py  views.py
fooddelivery/payments/migrations/: 0001_initial.py  0002_alter_payment_order.py
fooddelivery/ratings/: admin.py  models.py
fooddelivery/ratings/api/: router.py  serializers.py  views.py
fooddelivery/ratings/migrations/: 0001_initial.py  0002_alter_rating_user.py  0002_initial.py
fooddelivery/restaurants/: admin.py  models.py
fooddelivery/restaurants/api/: router.py  (+2 more)
fooddelivery/users/: admin.py  enums.py  managers.py  models.py
(+9 files in other folders)
